--- a/content/app.css
+++ b/content/app.css
@@ -1,3 +1,14 @@
 /* Custom css lives here */
 
-body { padding-bottom: 70px; }
+body { 
+	padding-bottom: 70px; 
+}
+
+/*button#hideButton {
+	margin-top: 15px;
+} */
+
+.firstProjectImage {
+	height: 200px;
+	width: 300px;
+}
